--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.3",
-    "@angular/common": "~13.0.3",
-    "@angular/compiler": "~13.0.3",
-    "@angular/core": "~13.0.3",
+    "@angular/animations": "13.2.3",
+    "@angular/common": "13.2.3",
+    "@angular/compiler": "13.2.3",
+    "@angular/core": "13.2.3",
     "@angular/fire": "^7.2.1",
-    "@angular/forms": "~13.0.3",
-    "@angular/platform-browser": "~13.0.3",
-    "@angular/platform-browser-dynamic": "~13.0.3",
-    "@angular/platform-server": "~13.0.3",
-    "@angular/router": "~13.0.3",
+    "@angular/forms": "13.2.3",
+    "@angular/platform-browser": "13.2.3",
+    "@angular/platform-browser-dynamic": "13.2.3",
+    "@angular/platform-server": "13.2.3",
+    "@angular/router": "13.2.3",
     "@nguniversal/express-engine": "^13.0.2",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
-    "@nrwl/angular": "13.3.11",
+    "@nrwl/angular": "13.8.3",
     "express": "^4.17.3",
     "firebase": "^9.6.7",
     "rxjs": "~7.4.0",
@@ -33,35 +33,36 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
+    "@angular-devkit/build-angular": "13.2.4",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.0.3",
-    "@angular/compiler-cli": "~13.0.3",
-    "@angular/language-service": "~13.0.3",
-    "@nrwl/cli": "13.3.11",
-    "@nrwl/cypress": "13.3.11",
-    "@nrwl/eslint-plugin-nx": "13.3.11",
-    "@nrwl/jest": "13.3.11",
-    "@nrwl/linter": "13.3.11",
-    "@nrwl/node": "^13.8.3",
-    "@nrwl/tao": "13.3.11",
-    "@nrwl/workspace": "13.3.11",
+    "@angular/cli": "13.2.4",
+    "@angular/compiler-cli": "13.2.3",
+    "@angular/language-service": "13.2.3",
+    "@nrwl/cli": "13.8.3",
+    "@nrwl/cypress": "13.8.3",
+    "@nrwl/eslint-plugin-nx": "13.8.3",
+    "@nrwl/jest": "13.8.3",
+    "@nrwl/linter": "13.8.3",
+    "@nrwl/node": "13.8.3",
+    "@nrwl/tao": "13.8.3",
+    "@nrwl/workspace": "13.8.3",
     "@schematics/angular": "^13.2.4",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~5.3.0",
-    "@typescript-eslint/parser": "~5.3.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "cypress": "^9.1.0",
-    "eslint": "8.2.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
-    "jest-preset-angular": "11.0.0",
-    "prettier": "^2.3.1",
+    "jest-preset-angular": "11.1.1",
+    "prettier": "2.5.1",
     "ts-jest": "27.0.5",
-    "typescript": "~4.4.3"
+    "typescript": "4.5.5"
   }
 }
+
